# mind

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
docs/superpowers/plans/: 2026-04-21-mind-evolve.md
docs/superpowers/specs/: 2026-04-21-mind-evolve-design.md
mind/: cache.py  cli.py  compressor.py  config.py  evolve.py  hook.py  index.py  sync.py  synthesizer.py
mind/extractors/: base.py  claude.py  codex.py  copilot.py  cursor.py  gemini.py  opencode.py
tests/: test_cache.py  test_cli.py  test_compressor.py  test_config.py  test_evolve.py  test_hook.py  test_index.py  test_sync.py  test_synthesizer.py
tests/fixtures/: claude_sample.jsonl  cursor_sample.jsonl  gemini_sample.json
tests/test_extractors/: test_base.py  test_claude.py  test_codex.py  test_copilot.py  test_cursor.py  test_gemini.py
