[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-mind"
version = "0.1.4"
description = "Persistent AI context management for multi-tool development — syncs Claude, Gemini, Cursor, Codex and Copilot transcripts into a single LLM-tuning file."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "PyYAML>=6.0",
]

[project.scripts]
mind = "mind.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
